<resources>
    <string name="app_name">PikerFree</string>
    <string name="facebook_app_id">152277168741117</string>
    <string name="google_maps_key">AIzaSyASvnkW0G2hWn7G_p-y56PEfgNrvkO_kCE</string>
    <string name="text_summary">Profile</string>
    <string name="text_quest">News</string>
    <string name="text_message">Messages</string>
    <string name="text_setting">Settings</string>
    <string name="intro_1">A wise man once said that "One man's trash is another man treasure"</string>
    <string name="intro_2">With this application, you will have a social network to give and to be received.</string>
    <string name="intro_3">Just tap and add some description and give your unused item to someone whom really in need.</string>
    <string name="intro_4">Just tap and seek for want you need that available from good people around you.</string>
    <string name="intro_5">PikerFree, sharing is caring.</string>
    <string name="start">Start</string>
    <string name="title_of_item_hint">Title&#8230;</string>
    <string name="short_description">Description&#8230;</string>
    <string name="input_username">Username&#8230;</string>
    <string name="input_email">Email&#8230;</string>
    <string name="password">Password&#8230;</string>
    <string name="password_confirm">Confirm password&#8230;</string>
    <string name="sync">Syncing data&#8230;</string>
    <string name="add_comment">Add a comment&#8230;</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="reset_pass">Reset password</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="op_cancel">Cancel</string>
    <string name="edit_comment">Edit comment</string>
    <string name="send_mess">Send message</string>
    <string name="choose">Choose</string>
    <string name="comment">Comment</string>
    <string name="view_profile">View profile</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="forgot_password">Forget password</string>
    <string name="rate_user">Rate this user</string>
    <string name="post">Post this</string>
    <string name="new_post">New post</string>
    <string name="edit_post">Edit post</string>
    <string name="select_a_category">Select a category</string>
    <string name="others">Others</string>
    <string name="pets">Pets</string>
    <string name="home_living">Home - Living</string>
    <string name="groceries">Groceries</string>
    <string name="electronics">Electronics</string>
    <string name="cloths">Cloths</string>
    <string name="baby_toy">Toys</string>
    <string name="recent">Recent</string>
    <string name="accessories">Accessories</string>
    <string name="favorite_list">Favorite list</string>
    <string name="about_us">About us</string>
    <string name="chat">Chat</string>
    <string name="granted">Granted</string>
    <string name="confirm">Confirm</string>
    <string name="follow">Follow</string>
    <string name="un_follow">Unfollow</string>
    <string name="confirm_new_pass">Confirm new password</string>
    <string name="your_post">Your posts:</string>
    <string name="new_pass">New password</string>
    <string name="current_pass">Current password</string>
    <string name="change_pass">Change password</string>
    <string name="back">Back to previous screen</string>
    <string name="text_message_hint">Message&#8230;</string>
    <string name="edit_profile">Edit profile</string>
    <string name="your_name">Your name</string>
    <string name="your_phone">Your phone number</string>
    <string name="your_address">Your address</string>
    <string name="help_and_tip">Help and tip</string>
    <string name="help_log_in">Trouble logging in</string>
    <string name="manage">Manage account</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="nearby">Nearby</string>
    <string name="list_view">List view</string>
    <string name="map_view">Map view</string>
    <string name="distance">Distance</string>
    <string name="notification">Notification</string>
    <string name="completed">Completed</string>
    <string name="send_request">Request</string>
    <string name="meet_owner">Meet the owner</string>
    <string name="post_view">POST</string>
    <string name="delete_this">Delete</string>
    <string name="edit_this">Edit post</string>
    <string name="closed">Closed</string>
    <string name="opening">Opening</string>
    <string name="notice">Notice</string>
    <string name="loading">Processing&#8230;</string>
    <string name="share">Share</string>
    <string name="error">Error</string>
    <string name="no_data">Nothing here!</string>
    <string name="we_need_email">We just need your registered email to send your email reset instructions.</string>
    <string name="no_have_account">Don\'t have an account? just sign up</string>
    <string name="already_have_an_account">Already have an account? just log in</string>
    <string name="no_data_mess">Sorry, we can not find any data for your input, please try other key</string>
    <string name="no_data_mess_2">Sorry, we can not show you anything. Something\'s wrong and i don\'t know why :\\</string>
    <string name="remove_fav_mess">This post has been removed from favorite</string>
    <string name="add_fav_mess">This post has been added to favorite</string>
    <string name="start_5">5 star</string>
    <string name="start_4">4 star</string>
    <string name="start_3">3 star</string>
    <string name="start_2">2 star</string>
    <string name="start_1">1 star</string>
    <string name="already_sent_rq">You already send the request before</string>
    <string name="empty_email">Email must not be empty.</string>
    <string name="empty_pass">Password must not be empty.</string>
    <string name="pass_weak">Password must be at least 6 characters</string>
    <string name="no_more">No more message</string>
    <string name="na">N/A</string>
    <string name="deleted_user">Deleted user</string>
    <string name="you"> (You)</string>
    <string name="tab_outside">Tab outside to cancel dialog</string>
    <string name="success">Successful</string>
    <string name="pls_fill_all">Please fill all the inputs</string>
    <string name="not_match">Password and it\'s confirm does not match.</string>
    <string name="already_review">You already review this user before.</string>
    <string name="follow_done_mess">"You are now following this user,
        you will get notification when this user have new post."</string>
    <string name="unfollow_mess">You are now stop following this user.</string>
    <string name="change_success">Your password had been changed successfully.</string>
    <string name="can_not_complete">Sorry, we can not complete this action.</string>
    <string name="fail_auth">Authentication failed, please check again your old password.</string>
    <string name="help_mess">Currently we don\'t have any online support system yet.
        If you get trouble logging in please contact email thanhahvan1@gmail.com for help</string>
    <string name="user_name_empty">Username must not be empty</string>
    <string name="granted_mess">The owner of this post had granted you this post.
        This mean you are chosen by the owner to receive the items.
        Please contact the owner to get the items. Our mission here is complete.\nHave a nice day!</string>
    <string name="confirm_log_out">Are you sure you want to log out?</string>
    <string name="confirm_delete_acc">This action will totally remove your data from system.
        Are you sure you want to delete your account?</string>
    <string name="confirm_request">To confirm sending request to receive this item. Tap OK.</string>
    <string name="confirm_delete">Are you sure you want to delete this?</string>
    <string name="you_own_this">You are the owner of this post!</string>
    <string name="requesting_user">Requesting users:</string>
    <string name="granted_user">Granted users:</string>
    <string name="no_requested_user">No requesting users</string>
    <string name="post_location">Post\'t location</string>
    <string name="your_follower">Your followers:</string>
    <string name="search_option">Which do you want to search?</string>
    <string name="user">User</string>
    <string name="slogan">Share with the world</string>
    <string name="gps_off">GPS is turned off</string>
    <string name="turn_gps">Please turn on your GPS to complete the process</string>
    <string name="version">Version 2.0</string>
    <string name="from_uit">From university of Information Technology</string>
    <string name="privacy">Privacy and term</string>
    <string name="warning_lack_description">Please enter the description for your post</string>
    <string name="warning_lack_category">Please choose a category for your post</string>
    <string name="warning_lack_title">Please enter the title for your post</string>
    <string name="complete_choose_receiver">You just decide to give item in this post to user.
        We now will provide you information of this user.
        Click OK to go to their profile.
        Please contact them to discus where and when for you to give the item.
        We will notify them about this even. Have a nice day!</string>
    <string name="post_is_closed">This post is closed by owner so you can not send request anymore"</string>
    <string name="post_can_not_edit">This post is closed so you can not edit anymore"</string>
    <string name="complete_send_rq">Your request has been sent to owner. Now just wait for their response.</string>
    <string name="complete_comment">Your comment had been deleted</string>
    <string name="complete_delete_acc">Your account had been deleted from Piker</string>
    <string name="we_sent_email">"We have sent you instructions to reset your password!"</string>
    <string name="click_to_back">We complete updating data. Tab OK to back to previous screen.</string>
    <string name="term_of_use">Bellow are behavior of this application that user need to aware:</string>
    <string name="role1">When user create a new post, if user\'s location detector is turning on,
        then application will automatics track the current location of user's device.</string>
    <string name="role2">The post\'s location is reveal to other users.</string>
    <string name="role3">User email, name, phone number, address is reveal to other users.</string>
    <string name="role4">User password is known by only user, system admin won\'t have any
        clue of user password in the situation of user forgot password.</string>
    <string name="role5">User can\'t spam message to people.</string>
    <string name="role6">Requester must respect the choice of Post owner.</string>
    <string name="help2">Make sure the title is simple and the images you add to post is clear.</string>
    <string name="help3">Your description is fine anyway. Other people can ask you more through message.</string>
    <string name="help4">Choose to follow people will make it notify you when they have new post.</string>
    <string name="help5">Your old item maybe seem useless to you but have a great power to other.</string>
    <string name="help6">Please don\'t feel hesitate send request to the post, we people are here to share.</string>
    <string name="about_team">PikerFree is final year thesis of:</string>
    <string name="about_team1">Ha Van Thanh - Android developer</string>
    <string name="about_team2">Pham Thi Dung - Node JS developer</string>
    <string name="about_team3">Contact:\nPhone: +84 962 550 486\n
        Email: thanhahvan1@gmail.com\nAddress: Linh Trung - Thu Duc - HCM City - Viet Nam.</string>
</resources>