<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/view_title"
        style="@style/normalToolbar">

        <ImageView
            android:id="@+id/ic_back"
            style="@style/toolbarBackButton" />

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:id="@+id/tv_title"
            style="@style/toolbarTitle"
            android:text="@string/about_us"
            app:fontAssetName="Roboto-Bold.ttf" />
    </LinearLayout>

    <ha.thanh.pikerfree.customviews.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="16dp"
        android:text="@string/about_team"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ha.thanh.pikerfree.customviews.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/about_team1"
        android:textColor="@color/GrayScale"
        android:textSize="18sp" />

    <ha.thanh.pikerfree.customviews.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/about_team2"
        android:textColor="@color/GrayScale"
        android:textSize="18sp" />

    <ha.thanh.pikerfree.customviews.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/about_team3"
        android:textColor="@color/GrayScale"
        android:textSize="18sp" />

</LinearLayout>
