<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_100"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/view_title"
            style="@style/ImmortalToolbar">

            <ImageView
                android:id="@+id/ic_back"
                style="@style/ToolbarLeftButton" />

            <ha.thanh.pikerfree.customviews.CustomTextView
                android:id="@+id/tv_title"
                style="@style/LegendToolbar"
                android:text="@string/help_and_tip"
                app:fontAssetName="Roboto-Bold.ttf" />
        </LinearLayout>

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="10dp"
            android:text="@string/help1"
            android:textColor="@color/text_black_50"
            android:textSize="18sp" />

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/help2"
            android:textColor="@color/text_black_50"
            android:textSize="18sp" />

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/help3"
            android:textColor="@color/text_black_50"
            android:textSize="18sp" />

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/help4"
            android:textColor="@color/text_black_50"
            android:textSize="18sp" />

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/help5"
            android:textColor="@color/text_black_50"
            android:textSize="18sp" />

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/help6"
            android:textColor="@color/text_black_50"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>
