<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteShade"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/view_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:padding="12dp"
                android:src="@drawable/ic_back"
                android:tint="@color/white" />

            <ha.thanh.pikerfree.customviews.CustomTextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="46dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:text="Privacy and term"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="10dp"
            android:text="@string/term_of_use"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/role1"
            android:textColor="@color/text_black_3"
            android:textSize="18sp" />

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/role2"
            android:textColor="@color/text_black_3"
            android:textSize="18sp" />

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/role3"
            android:textColor="@color/text_black_3"
            android:textSize="18sp" />

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/role4"
            android:textColor="@color/text_black_3"
            android:textSize="18sp" />

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/role5"
            android:textColor="@color/text_black_3"
            android:textSize="18sp" />

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/role6"
            android:textColor="@color/text_black_3"
            android:textSize="18sp" />

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/role7"
            android:textColor="@color/text_black_3"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>
