<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackLight"
    android:orientation="vertical"
    tools:context="ha.thanh.pikerfree.activities.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/we_need_email"
            android:textSize="18sp" />

        <ha.thanh.pikerfree.customviews.CustomEditText
            android:id="@+id/et_email_reset"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:background="@drawable/plate"
            android:hint="@string/input_email"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="18sp" />

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:id="@+id/btn_reset"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:background="@drawable/plate_fill_green"
            android:gravity="center"
            android:text="@string/reset_pass"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ha.thanh.pikerfree.customviews.CustomTextView
            android:id="@+id/btn_back"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:background="@drawable/plate_green"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/green"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
