<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/plate_brown_shade"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <ha.thanh.pikerfree.customviews.CustomTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:fontAssetName="Roboto-Bold.ttf" />

    <ha.thanh.pikerfree.customviews.CustomTextView
        android:id="@+id/btn_view_profile"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:background="@drawable/plate_shade_blue"
        android:gravity="center"
        android:text="@string/view_profile"
        android:textColor="@color/white_100"
        android:textSize="18sp" />

    <ha.thanh.pikerfree.customviews.CustomTextView
        android:id="@+id/btn_send_mes"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:background="@drawable/plate_green_shade"
        android:gravity="center"
        android:text="@string/send_mess"
        android:textColor="@color/white_100"
        android:textSize="18sp" />

    <ha.thanh.pikerfree.customviews.CustomTextView
        android:id="@+id/btn_choose"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:background="@drawable/plate_orange_shade"
        android:gravity="center"
        android:text="@string/choose"
        android:textColor="@color/white_100"
        android:textSize="18sp" />
</LinearLayout>